Fix overflowing table in IE9 by recommending new HTML for a scrolling table

--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -223,4 +223,12 @@ $show-header-for-stacked: false !default;
   table.hover {
     @include table-hover;
   }
+
+  .table-scroll {
+    overflow-x: auto;
+
+    table {
+      width: auto;
+    }
+  }
 }
